# ShadedPathV

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresetsXXX.json  CTestConfig.cmake  DeviceCoordinates.drawio  Makefile  README.md  TutorialConfig.h.in  Untitled Diagram.drawio  VulkanObjects.txt  create_textures.sh  help.cmake  licenses.txt  linux_build.sh  linux_clean.sh  linux_cmake.sh  linux_cmake_debug.sh  meshlets.md  notes.txt  notes.txt.bak  planning.md  set-single-sided.mjs  sp.cap  todo.txt  trace.txt  tutorialConfig.cpp  vcpkg.json
.github/upgrades/: assessment.md
ShadedPathV/: CMakeLists.txt  Makefile  ShadedPathV.sln
ShadedPathV/ShadedPathTest/: ShadedPathTest.vcxproj  ShadedPathTest.vcxproj.filters  pch.h  test.cpp
ShadedPathV/ShadedPathV/: CMakeLists.txt  Makefile  ShadedPathV.cpp  ShadedPathV.vcxproj  ShadedPathV.vcxproj.bak  ShadedPathV.vcxproj.filters  imgui.ini  imgui.ini.bak  pch.h  xxx.ktx
ShadedPathV/ShadedPathVLib/: BillboardDemo.cpp  BillboardDemo.h  BillboardShader.cpp  BillboardShader.h  CMakeLists.txt  Camera.h  ClearShader.cpp  ClearShader.h  CubeShader.cpp  CubeShader.h  DeviceCoordApp.cpp  DeviceCoordApp.h  Files.cpp  Files.h  GameTime.cpp  GameTime.h  GeneratedTexturesApp.cpp  GeneratedTexturesApp.h  GlobalRendering.cpp  GlobalRendering.h  LandscapeDemo1.cpp  LandscapeDemo1.h  LandscapeGenerator.cpp  LandscapeGenerator.h  LineApp.cpp  LineApp.h  LineShader.cpp  LineShader.h  Makefile  Object.cpp  Object.h  Presentation.cpp  Presentation.h  ShadedPathEngine.cpp  ShadedPathEngine.h  ShadedPathVLib.cpp  ShadedPathVLib.vcxproj  ShadedPathVLib.vcxproj.bak  ShadedPathVLib.vcxproj.filters  ShaderBase.cpp  (+38 more)
ShadedPathV/ShadedPathVLib/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_tables.cpp  imgui_widgets.cpp
ShadedPathV/ShadedPathVLib/miniaudio/: miniaudio.h
ShadedPathV/ShadedPathVLib/miniaudio/extras/: stb_vorbis.c
ShadedPathV/ShadedPathVLib/shader/: billboard.frag  billboard.geom  billboard.mesh  billboard.vert  cube.frag  cube.vert  genbrdflut.frag  genbrdflut.vert  line.vert  pbr.frag  pbr.vert  triangle.frag  triangle.vert
cmake/: dependencies.cmake
docs/: GPU_Structure_Logger.md
shadedpath_lib/: CMakeLists.txt  MakeTable.cmake  mymath.cpp  mymath.h  mysqrt.cpp  mysqrt.h
src/app/: AppSupport.cpp  AppSupport.h  BillboardDemo.cpp  BillboardDemo.h  CMakeLists.txt  DeviceCoordApp.cpp  DeviceCoordApp.h  Forest.cpp  Forest.h  GeneratedTexturesApp.cpp  GeneratedTexturesApp.h  LandscapeDemo1.cpp  LandscapeDemo1.h  LandscapeGenerator.cpp  LandscapeGenerator.h  LineApp.cpp  LineApp.h  Loader.cpp  Loader.h  MeshManager.cpp  MeshManager.h  Rocks.cpp  Rocks.h  ShadedPathV.cpp  SimpleApp.cpp  SimpleApp.h  SimpleMultiApp.cpp  SimpleMultiApp.h  SimpleMultiWin.cpp  SimpleMultiWin.h  SimpleNewArch.cpp  SimpleNewArch.h  TextureViewer.cpp  TextureViewer.h  glbLodMerger.cpp  glbLodMerger.h  gltfObjectsApp.cpp  gltfObjectsApp.h  gltfTerrainApp.cpp  gltfTerrainApp.h  (+2 more)
src/lib/: BillboardDemo.cpp  BillboardDemo.h  BillboardShader.cpp  BillboardShader.h  CMakeLists.txt  Camera.cpp  Camera.h  ClearShader.cpp  ClearShader.h  CubeShader.cpp  CubeShader.h  DeviceCoordApp.cpp  DirectImage.cpp  DirectImage.h  EngineParticipant.h  Files.cpp  Files.h  Game.cpp  Game.h  GameTime.cpp  GameTime.h  GeneratedTexturesApp.cpp  Global.h  GlobalDef.h  GlobalRendering.cpp  GlobalRendering.h  GlobalUpdate.cpp  GlobalUpdate.h  HelperFunctions.h  ImageConsumer.cpp  ImageConsumer.h  LandscapeDemo1.cpp  LandscapeGenerator.cpp  LandscapeGenerator.h  LineApp.cpp  LineApp.h  LineShader.cpp  LineShader.h  LineShaderOld.cpp  LineShaderOld2.cpp  (+49 more)
src/lib/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_tables.cpp  imgui_widgets.cpp
src/lib/public_headers/: ShadedPathEngine.h  mainheader.h
src/lib/shader/: billboard.frag  billboard.geom  billboard.mesh  billboard.vert  common_cpp_shader.h  cube.frag  cube.vert  debug_colors.glsl  filtercube.vert  genbrdflut.frag  genbrdflut.vert  irradiancecube.frag  pbr.frag  pbr.frag.spv  pbr.mesh  pbr.task  pbr.vert  pbr_mesh_common.glsl  prefilterenvmap.frag  shadermaterial.glsl  triangle.frag  triangle.vert
src/lib/tinygltf/: tiny_gltf.h
src/lib/volk/: volk.cpp
src/test/: CMakeLists.txt  test.cpp
test_samples/mesh/: test_multi_prim_lod_cmp.glb  test_multi_prim_lod_cmp.glb.meshlet
tools/texture/: .project
tools/texture/src/de/fehrprice/texture/: Pak.java
